--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,14 @@
 * {
   padding: 0px;
   margin: 0px;
+  position: relative;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
+
+html, body {
+  height: 100%;
+  width: 100%;
 }
 
 /*Navigation bar*/
@@ -119,12 +127,15 @@ li>a {
 
 .search {
   display: inline-block;
-  padding: 3px;
+  padding: 5px;
   margin-right: 10px;
   font-family: arial,sans-serif;
+  font-size: 0.8em;
   color: #444;
   font-weight: bold;
-  border: 1px, solid, rgba(0,0,0, 0.3);
+  border: 1px solid #dcdcdc;
+  background: #f5f5f5;
+  height: 29px;
 }
 
 .search-buttons-container {
@@ -132,4 +143,38 @@ li>a {
   width: auto;
   margin: 15px auto;
   text-align: center;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  border-top: 1px solid #dcdcdc;
+}
+
+.footer-right {
+  float: right;
+/*  margin-right: 35px;*/
+}
+
+.footer-left {
+  float: left;
+/*  margin-left: 35px;*/
+}
+
+.footer-left, .footer-right {
+  margin: 15px;
+}
+
+.footer * li {
+  display: inline-block;
+}
+
+.footer-right li:nth-child(2), .footer-right li:nth-child(3) {
+  margin-left: 15px; 
+}
+
+.footer-left li:nth-child(1), .footer-left li:nth-child(2) {
+  margin-right: 15px; 
 }
